# semana0_emilio_s

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py  config.py  main.py  schemas.py
postman/: FastApi-Ollama.postman_collection.json
