[tool.poetry]
name = "ollama-fastapi-app"
version = "0.1.0"
description = "This project aims to provide an interface for interacting with your AI language model, enabling users to submit queries via HTTP requests."
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.1,<0.35.0"
requests = ">=2.32.3,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
ollama = ">=0.4.7,<0.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

